--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <button id="startBtn" class="bg-green-500 text-white px-4 py-2 rounded-lg hover:bg-green-600">Start</button>
             <button id="stopBtn" class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600">Stop</button>
             <button id="resetBtn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">Reset</button>
+            <button id="resetBtn" class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600">salom</button>
         </div>
     </div>
 <script src="script.js"></script>
